--- a/drupal_module.routing.yml
+++ b/drupal_module.routing.yml
@@ -2,6 +2,6 @@ drupal_module.form:
   path: '/drupal-module-form'
   defaults: 
     _title: 'Redirect Module Form'
-    _form: '\Drupal\drupal_module\Form\redirectingform'
+    _form: '\Drupal\drupal_module\Form\RedirectingForm'
   requirements:
     _permission: 'access content'
